# blvm-miningos

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  VALIDATION.md  module.toml
.github/workflows/: ci.yml  release.yml
bridge/: README.md  ipc-client.js  package.json  worker.js
config/: miningos.toml.example
docs/: INTEGRATION.md
examples/: basic_usage.rs
src/: api.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  manager.rs  module.rs  nodeapi_ipc.rs
src/actions/: executors.rs  handler.rs  mod.rs
src/data/: mod.rs  stats_collector.rs  template_provider.rs  thing_converter.rs
src/http/: auth.rs  client.rs  endpoints.rs  mod.rs
src/p2p/: bridge_manager.rs  bridge_server.rs  mod.rs
tests/: integration_test.rs
