[package]
name = "blvm-miningos"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "MiningOS integration module for BLVM"
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm-miningos"
homepage = "https://btcdecoded.org"
keywords = ["bitcoin", "mining", "miningos", "module"]
categories = ["cryptography::cryptocurrencies"]

[[bin]]
name = "blvm-miningos"
path = "src/main.rs"

[lib]
name = "blvm_miningos"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[dependencies]
# BLVM dependencies
blvm-node = { path = "../blvm-node", package = "blvm-node" }
blvm-sdk = { path = "../blvm-sdk", default-features = false, features = ["node"] }
blvm-sdk-macros = { path = "../blvm-sdk/crates/blvm-sdk-macros" }
blvm-protocol = { path = "../blvm-protocol", package = "blvm-protocol" }
blvm-consensus = { path = "../blvm-consensus", package = "blvm-consensus" }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

